--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "dependencies": {
     "@angular/animations": "9.1.4",
     "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.0.6",
     "@angular/core": "^9.1.4",
     "@angular/forms": "^9.1.4",
     "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/router": "^9.1.4",
+    "angular-datatables": "^9.0.2",
+    "cli": "^1.0.1",
+    "core-js": "^3.6.4",
+    "datatable": "^2.0.2",
+    "datatables.net": "^1.10.20",
+    "datatables.net-editor-server": "^1.9.3",
+    "icons": "^1.0.0",
+    "jquery": ">=3.4.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
